crates/ddlog-syntax/tests/inline/pass/relation_columns.rast
ROOT@0..116
  COMMENT@0..12 "// kind:item"
  WHITESPACE@12..13 "\n"
  ITEM@13..48
    RELATION_DEF@13..48
      MODIFIERS@13..13
      REL_KW@13..21
        RELATION@13..21 "relation"
      WHITESPACE@21..22 " "
      REL_NAME@22..25
        IDENT@22..25 "Foo"
      REL_COLS@25..47
        L_PAREN@25..26 "("
        REL_COL@26..34
          IDENT@26..29 "bar"
          COLON@29..30 ":"
          WHITESPACE@30..31 " "
          IDENT@31..34 "Baz"
        COMMA@34..35 ","
        WHITESPACE@35..36 " "
        REL_COL@36..46
          IDENT@36..40 "bing"
          COLON@40..41 ":"
          WHITESPACE@41..42 " "
          IDENT@42..46 "Bang"
        R_PAREN@46..47 ")"
      WHITESPACE@47..48 "\n"
  ITEM@48..83
    RELATION_DEF@48..83
      MODIFIERS@48..48
      REL_KW@48..56
        MULTISET@48..56 "multiset"
      WHITESPACE@56..57 " "
      REL_NAME@57..60
        IDENT@57..60 "Foo"
      REL_COLS@60..82
        L_PAREN@60..61 "("
        REL_COL@61..69
          IDENT@61..64 "bar"
          COLON@64..65 ":"
          WHITESPACE@65..66 " "
          IDENT@66..69 "Baz"
        COMMA@69..70 ","
        WHITESPACE@70..71 " "
        REL_COL@71..81
          IDENT@71..75 "bing"
          COLON@75..76 ":"
          WHITESPACE@76..77 " "
          IDENT@77..81 "Bang"
        R_PAREN@81..82 ")"
      WHITESPACE@82..83 "\n"
  ITEM@83..116
    RELATION_DEF@83..116
      MODIFIERS@83..83
      REL_KW@83..89
        STREAM@83..89 "stream"
      WHITESPACE@89..90 " "
      REL_NAME@90..93
        IDENT@90..93 "Foo"
      REL_COLS@93..115
        L_PAREN@93..94 "("
        REL_COL@94..102
          IDENT@94..97 "bar"
          COLON@97..98 ":"
          WHITESPACE@98..99 " "
          IDENT@99..102 "Baz"
        COMMA@102..103 ","
        WHITESPACE@103..104 " "
        REL_COL@104..114
          IDENT@104..108 "bing"
          COLON@108..109 ":"
          WHITESPACE@109..110 " "
          IDENT@110..114 "Bang"
        R_PAREN@114..115 ")"
      WHITESPACE@115..116 "\n"
