crates/ddlog-syntax/tests/inline/fail/double_comma_relation_arg.rast
ROOT@0..38
  COMMENT@0..12 "// kind:item"
  WHITESPACE@12..13 "\n"
  ITEM@13..38
    RELATION_DEF@13..38
      MODIFIERS@13..13
      REL_KW@13..21
        RELATION@13..21 "relation"
      WHITESPACE@21..22 " "
      REL_NAME@22..25
        IDENT@22..25 "Foo"
      REL_COLS@25..37
        L_PAREN@25..26 "("
        REL_COL@26..34
          IDENT@26..29 "bar"
          COLON@29..30 ":"
          WHITESPACE@30..31 " "
          IDENT@31..34 "Baz"
        COMMA@34..35 ","
        COMMA@35..36 ","
        R_PAREN@36..37 ")"
      WHITESPACE@37..38 "\n"
--
Error: got multiple commas between relation arguments
   ,-[inline/fail/double_comma_relation_arg.dl:2:23]
   |
 2 | relation Foo(bar: Baz,,)
   :                       |  
   :                       `-- help: remove this comma
---'
--
// kind:item
relation Foo(bar: Baz,,)

